--- a/src/main/webapp/main.css
+++ b/src/main/webapp/main.css
@@ -18,28 +18,6 @@ td.content {
     padding: 5px 30px 5px 10px;
 }
 
-a.edit {
-    display: inline-block;
-    width: 32px;
-    height: 32px;
-    background: url('edit.png');
-}
-
-a.add-button, form button {
-    display: inline-block;
-    min-width: 32px;
-    height: 32px;
-    line-height: 32px;
-}
-
-a.add-button {
-    background: #0C4 url('add.png') 2px 2px no-repeat;
-    color: #333;
-    text-decoration: none;
-    margin: 5px 5px 0 0;
-    padding: 2px 5px 2px 36px;
-}
-
 form {
     width: 450px;
     padding: 0 20px 20px 20px;
@@ -57,11 +35,51 @@ form label {
     margin-top: 32px;
 }
 
-form button {
-    height: 36px;
-    line-height: 36px;
+form input[readonly] {
+    background: #CCC;
+}
+
+a.edit, a.view, a.add-button, a.edit-button, a.back, form button {
+    display: inline-block;
+    border: 0;
+    min-width: 32px;
+    height: 32px;
+    line-height: 32px;
+    color: #333;
+    outline: 0;
+}
+
+a.add-button, a.edit-button, a.back, form button {
     margin: 32px 5px 0 0;
     padding: 0 5px 0 32px;
+}
+
+form button {
+    cursor: pointer;
+}
+
+a.edit, a.view, a.add-button, a.edit-button, a.back {
+    text-decoration: none;
+}
+
+a.edit {
+    background: url('edit.png');
+}
+
+a.view {
+    background: url('view.png');
+}
+
+a.add-button {
+    background: #0C4 url('add.png') no-repeat;
+}
+
+a.edit-button {
+    background: #0C4 url('edit.png') no-repeat;
+}
+
+a.back {
+    background: #04C url('back.png') no-repeat;
 }
 
 form button.save {
@@ -76,6 +94,16 @@ form button.reset {
     background: #04C url('reset.png') no-repeat;
 }
 
-form button.back {
-    background: #04C url('back.png') no-repeat;
+form button.login {
+    background: #0C4;
+    padding: 0 32px 0 32px;
+}
+
+p.error {
+    width: 410px;
+    background: #C44;
+    border: 1px solid #400;
+    padding: 5px 20px;
+    margin: 0 20px;
+    color: #400;
 }
